--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
         <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarText">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" id="home" aria-current="page" routerLink="/home" routerLinkActive='active'><i class="fa-brands fa-github"></i>Home</a>
+              <a class="nav-link active" id="home" aria-current="page" routerLink="/home" routerLinkActive='active'><i class="fa-brands fa-home"></i>Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id ="Search"routerLink="/main" routerLinkActive='active'>Search </a>
+              <a class="nav-link" id ="Search"routerLink="/main" routerLinkActive='active'>Search</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id ="back"routerLink="/home" routerLinkActive='active'>Back To Top</a>
