ft:service - injecting http client to display user data for home page

--- a/src/app/Components/search/search.component.html
+++ b/src/app/Components/search/search.component.html
@@ -9,7 +9,7 @@
         <input type="text"  name="searchingName" class="form-control" id="search"
           placeholder="Git hub userName " ngModel required>
       </div>
-      <button type="submit" id="btn" (click) = "getUser(search.value)"  class="btn btn-outline-danger d-block mx-auto">Search</button>
+      <button type="submit" id="btn"   class="btn btn-outline-danger d-block mx-auto">Search</button>
     </form>
   </div>
 </div>
@@ -17,3 +17,5 @@
 <!-- (ngSubmit)="getUser(githubsearchform) -->
 <!-- [(ngModel)]="searchingName" -->
 <!--  -->
+
+<!-- (click) = "getUser(search.value)" -->
